@@ -1,19 +1,23 @@
 package com.buildguard.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.buildguard.dto.UserRequest;
 import com.buildguard.dto.UserResponse;
 import com.buildguard.entity.User;
+import com.buildguard.exception.DuplicateResourceException;
+import com.buildguard.exception.ResourceNotFoundException;
 import com.buildguard.mapper.UserMapper;
 import com.buildguard.repository.UserRepository;
 import com.buildguard.service.UserService;
 
 @Service
 public class UserServiceImpl implements UserService {
+
+    private static final String USER_NOT_FOUND = "User not found";
+    private static final String EMAIL_ALREADY_EXISTS = "Email already exists";
 
     private final UserRepository userRepository;
 
@@ -25,11 +29,10 @@ public class UserServiceImpl implements UserService {
     public UserResponse createUser(UserRequest request) {
 
         if (userRepository.existsByEmail(request.getEmail())) {
-            throw new RuntimeException("Email already exists");
+            throw new DuplicateResourceException(EMAIL_ALREADY_EXISTS);
         }
 
         User user = UserMapper.toEntity(request);
-
         User savedUser = userRepository.save(user);
 
         return UserMapper.toResponse(savedUser);
@@ -41,14 +44,14 @@ public class UserServiceImpl implements UserService {
         return userRepository.findAll()
                 .stream()
                 .map(UserMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserResponse getUserById(Long id) {
 
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         return UserMapper.toResponse(user);
     }
@@ -57,9 +60,8 @@ public class UserServiceImpl implements UserService {
     public void deleteUser(Long id) {
 
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         userRepository.delete(user);
     }
-
 }
